fixing alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,15 +21,19 @@ header img {
 }
 
 .container {
-  background-color: #fff; /* Ensure white background */
+  background-color: #fff;
   padding: 40px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-  display: inline-block;
+  display: flex;
+  flex-direction: column
+  align-items: center;
+  justify-content: center;
   max-width: 100%;
   height: auto;
-  margin-top: 20px; /* Add spacing above the form */
+  margin-top: 20px;
 }
+
 
 form {
   margin-top: 20px;
@@ -81,7 +85,7 @@ button:hover {
 @media (max-width: 768px) {
   .container {
     width: 90%;
-    margin: 0 auto; /* Fix container alignment */
+    margin: 0 auto;
   }
   input, button {
     width: 90%;
